created home page

--- a/lesson_02/index.html
+++ b/lesson_02/index.html
@@ -4,9 +4,27 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Pizza</title>
+    <style>
+      .back-link {
+        display: inline-block;
+        margin-top: 20px;
+        padding: 10px 20px;
+        background-color: #28a745;
+        color: white;
+        border-radius: 5px;
+        text-decoration: none;
+        font-weight: bold;
+        transition: background-color 0.3s, transform 0.3s;
+      }
+      .back-link:hover {
+        background-color: #218838;
+        transform: translateY(-2px);
+      }
+    </style>
   </head>
   <body>
     <header>
+      <div><a href="/index.html" class="back-link">На головну</a></div>
       <mark
         ><a
           title="Перейти до Вікіпедії"
