--- a/lesson_03/index.html
+++ b/lesson_03/index.html
@@ -10,6 +10,7 @@
 
   <body>
     <header>
+      <div><a href="/index.html" class="back-link">На головну</a></div>
       <nav>
         <ul>
           <li><a href="#intro">Вступ</a></li>
