--- a/lesson_05/index.html
+++ b/lesson_05/index.html
@@ -10,7 +10,7 @@
 
   <body>
     <header>
-      <div><a href="/index.html" class="back-link">На головну</a></div>
+      <div><a href="https://riimm7.github.io/HomeWork/index.html" class="back-link">На головну</a></div>
     </header>
     <main class="main"></main>
     <footer></footer>
