change_wrong_link

--- a/lesson_04/index.html
+++ b/lesson_04/index.html
@@ -82,7 +82,7 @@
     <footer>
       <p>
         Дана стаття взята з
-        <a href="ukrainer.net/huru/" target="_blank"
+        <a href="https://www.ukrainer.net/huru/" target="_blank"
           >Ukraїner</a
         >.
       </p>
