--- a/lesson_05/index.html
+++ b/lesson_05/index.html
@@ -5,14 +5,63 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="css/style.css" />
     <!-- <link rel="stylesheet" href="css/reset.css" /> -->
-    <title>Document</title>
+    <title>HomeWork_05</title>
   </head>
 
   <body>
     <header>
       <div><a href="https://riimm7.github.io/HomeWork/index.html" class="back-link">На головну</a></div>
     </header>
-    <main class="main"></main>
+    <main class="main">
+      <section>
+        <div class="container">
+          <div class="main-content">
+            <h6>Our Advantages</h6>
+            <h2>
+              Explore the Modern Connected Risk Platform
+            </h2>
+            <p>
+              Built to provide the efficiency, connectedness, and visibility you need to stay ahead of today’s dynamic risk environment.
+            </p>
+          </div>
+          <div class="cards">
+            <div class="card">
+              <img src="img/card_01.png" alt="icon" class="icon">
+              <h5>Risk Management </h5>
+              <div class="divider"></div>
+              <p>The gradual 
+                accumulation of 
+                information about </p>
+            </div>
+            <div class="card lower-card">
+              <img src="img/card_02.png" alt="icon" class="icon">
+              <h5>Compliance Management</h5>
+              <div class="divider"></div>
+              <p>The gradual 
+                accumulation of 
+                information about </p>
+            </div>
+            <div class="card other-style">
+              <img src="img/card_03.png" alt="icon" class="icon">
+              <h5>SOX Management</h5>
+              <div class="divider"></div>
+              <p>The gradual 
+                information about 
+                atomic behaviour...</p>
+            </div>
+            <div class="card lower-card">
+              <img src="img/card_04.png" alt="icon" class="icon">
+              <h5>Internal Audit Streamlined
+              </h5>
+              <div class="divider"></div>
+              <p>The gradual 
+                accumulation of 
+                information about </p>
+            </div>
+          </div>
+        </div>
+      </section>
+    </main>
     <footer></footer>
   </body>
 </html>
