--- a/lesson_05/index.html
+++ b/lesson_05/index.html
@@ -16,7 +16,7 @@
       <section>
         <div class="container">
           <div class="main-content">
-            <h6>Our Advantages</h6>
+            <p class="top-title">Our Advantages</p>
             <h2>
               Explore the Modern Connected Risk Platform
             </h2>
