--- a/lesson_06/index.html
+++ b/lesson_06/index.html
@@ -1,18 +1,95 @@
 <!DOCTYPE html>
 <html lang="uk">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="css/style.css" />
-    <!-- <link rel="stylesheet" href="css/reset.css" /> -->
-    <title>Document</title>
-  </head>
 
-  <body>
-    <header>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="css/style.css" />
+  <title>HomeWork_06</title>
+</head>
+
+<body>
+  <div class="wrapper">
+    <header class="header">
       <div><a href="/index.html" class="back-link">На головну</a></div>
     </header>
-    <main class="main"></main>
-    <footer></footer>
-  </body>
+    <main class="page">
+      <div class="container">
+        <section class="autobazar">
+          <div class="text">
+            <p>Sed commodo aliquam dui ac porta. Fusce ipsum felis, imperdiet at posuere ac, viverra at mauris. Maecenas
+              tincidunt ligula a sem vestibulum pharetra. Maecenas auctor tortor lacus, nec laoreet nisi porttitor vel.
+              Etiam tincidunt metus vel dui interdum sollicitudin. Mauris sem ante, vestibulum nec orci vitae, aliquam
+              mollis lacus. Sed et condimentum arcu, id molestie tellus. Nulla facilisi. Nam scelerisque vitae justo a
+              convallis. Morbi urna ipsum, placerat quis commodo quis, egestas elementum leo. Donec convallis mollis
+              enim. Aliquam id mi quam. Phasellus nec fringilla elit.</p>
+            <p>Nulla mauris tellus, feugiat quis pharetra sed, gravida ac dui. Sed iaculis, metus faucibus elementum
+              tincidunt, turpis mi viverra velit, pellentesque tristique neque mi eget nulla. Proin luctus elementum
+              neque et pharetra.</p>
+          </div>
+          <ul class="list">
+            <li>100 g of fresh leaves provides.</li>
+            <li>Aliquam ac est at augue volutpat elementum.</li>
+            <li>Quisque nec enim eget sapien molestie.</li>
+            <li>Proin convallis odio volutpat finibus posuere.</li>
+          </ul>
+          <p>Cras et diam maximus, accumsan sapien et, sollicitudin velit. Nulla blandit eros non turpis lobortis
+            iaculis at ut massa.</p>
+        </section>
+        <section class="hydra">
+          <div class="information">
+            <div class="information-item item-1">
+              <img src="img/location-icon.png" alt="location icon">
+              <div class="information-text">
+                <div class="information-title">Pay Us a Visit</div>
+                <div class="information-subtitle">Union St, Seattle, WA 98101, United States</div>
+              </div>
+            </div>
+            <div class="line"></div>
+            <div class="information-item item-2">
+              <img src="img/phone-icon.png" alt="phone icon">
+              <div class="information-text">
+                <div class="information-title">Give Us a Call</div>
+                <div class="information-subtitle">(110) 1111-1010</div>
+              </div>
+            </div>
+            <div class="line"></div>
+            <div class="information-item item-3">
+              <img src="img/mail-icon.png" alt="mail icon">
+              <div class="information-text">
+                <div class="information-title">Send Us a Message</div>
+                <div class="information-subtitle">Contact@HydraVTech.com</div>
+              </div>
+            </div>
+          </div>
+          <div class="about">
+            <div class="about-image">
+              <img src="img/man-vr.jpg"
+                alt="A man wearing a virtual reality headset, fully immersed in a digital experience, with a focused expression on his face.">
+            </div>
+            <div class="about-content">
+              <h1>ABOUT</h1>
+              <h2>HYDRA VR</h2>
+              <p>Eget mi proin sed libero enim sed faucibus turpis. Nisl rhoncus mattis rhoncus
+                urna neque viverra justo. Vivamus at augue eget arcu dictum. Ultrices gravida
+                dictum fusce ut placerat orci. Aenean et tortor at risus viverra adipiscing at in.
+                Mattis aliquam faucibus purus in massa. Est placerat in egestas erat imperdiet
+                sed. Consequat semper viverra nam libero justo laoreet sit amet. Aliquam
+                etiam erat velit scelerisque in dictum non consectetur a. Laoreet sit amet
+                cursus sit amet. Vel eros donec ac odio tempor orci dapibus. Sem nulla pha
+                retra diam sit amet nisl suscipit adipiscing bibendum. Leo a diam sollicitudi
+                n tempor.</p>
+              <div class="button">
+                <a href="#">LET’S GET IN TOUCH</a>
+              </div>
+            </div>
+          </div>
+      </div>
+      </section>
+  </div>
+  </main>
+  <footer class="footer"></footer>
+  </div>
+</body>
+
 </html>
