--- a/lesson_07/index.html
+++ b/lesson_07/index.html
@@ -4,15 +4,20 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="css/style.css" />
-    <!-- <link rel="stylesheet" href="css/reset.css" /> -->
-    <title>Document</title>
+    <title>HomeWork_06</title>
   </head>
 
   <body>
-    <header>
-      <div><a href="/index.html" class="back-link">На головну</a></div>
-    </header>
-    <main class="main"></main>
-    <footer></footer>
+    <div class="wrapper">
+      <header class="header">
+        <div><a href="/index.html" class="back-link">На головну</a></div>
+      </header>
+      <main class="page">
+        <div class="container">
+          
+        </div>
+      </main>
+      <footer class="footer"></footer>
+    </div>
   </body>
 </html>
