--- a/lesson_07/index.html
+++ b/lesson_07/index.html
@@ -1,23 +1,77 @@
 <!DOCTYPE html>
 <html lang="uk">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="css/style.css" />
-    <title>HomeWork_06</title>
-  </head>
 
-  <body>
-    <div class="wrapper">
-      <header class="header">
-        <div><a href="/index.html" class="back-link">На головну</a></div>
-      </header>
-      <main class="page">
-        <div class="container">
-          
-        </div>
-      </main>
-      <footer class="footer"></footer>
-    </div>
-  </body>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="css/style.css" />
+  <title>HomeWork_06</title>
+</head>
+
+<body>
+  <div class="wrapper">
+    <header class="header">
+      <div><a href="/index.html" class="back-link">На головну</a></div>
+    </header>
+    <main class="page">
+      <div class="container">
+        <section class="business">
+          <div class="first-task">
+            <h1>Meet our <br><span>Professional Faculty</span></h1>
+            <div class="cards">
+              <div class="card">
+                <img src="img/photo_01.jpg" alt="#">
+                <h2 class="card-title">Albert Flores</h2>
+                <p class="card-text">Founder of FeatherDev Academy <br>Masters in Finance | University of New York </p>
+                <div class="card-link"><a href="#">Read more</a></div>
+              </div>
+              <div class="card">
+                <img src="img/photo_02.jpg" alt="#">
+                <h2 class="card-title">Arlene McCoy</h2>
+                <p class="card-text">15 Year + Experience in Teaching and Former RBI Grade B Employee. Have Qualified
+                  USMLE Mains twice and is just like a knowledge book of Economics.</p>
+                <div class="card-link"><a href="#">Read more</a></div>
+              </div>
+              <div class="card">
+                <img src="img/photo_03.jpg" alt="#">
+                <h2 class="card-title">Annette Black</h2>
+                <p class="card-text">10 Year + Experience in Teaching and Former Civil Servant. Specialized in teaching
+                  History and no student wants to miss their class.</p>
+                <div class="card-link"><a href="#">Read more</a></div>
+              </div>
+            </div>
+          </div>
+          <div class="second-task">
+            <div class="inner-container">
+              <h2>Best Faculty from New York is <br><span>Now Available in California!</span></h2>
+              <p>Our Faculty is common in all the branches which helps us to maintain the quality education across
+                India. Now there is no need to go anywhere!</p>
+              <ul>
+                <li>Learn from Top Educators in your city</li>
+                <li>Regular Classes & Doubt Solving</li>
+                <li>300+ Selections in 2022-2023 Batch</li>
+              </ul>
+            </div>
+          </div>
+        </section>
+        <section class="game">
+          <h2>Гра "Win this game"</h2>
+          <div class="start">Start</div>
+          <div class="block-10"></div>
+          <div class="block-20"></div>
+          <div class="block-30"></div>
+          <div class="block-40"></div>
+          <div class="block-50"></div>
+          <div class="block-60"></div>
+          <div class="block-70"></div>
+          <div class="block-80"></div>
+          <div class="block-90"></div>
+          <div class="finish">Finish</div>
+        </section>
+      </div>
+    </main>
+    <footer class="footer"></footer>
+  </div>
+</body>
+
 </html>
