--- a/lesson_06/index.html
+++ b/lesson_06/index.html
@@ -15,7 +15,7 @@
     </header>
     <main class="page">
       <div class="container">
-        <section class="autobazar">
+        <div class="autobazar">
           <div class="text">
             <p>Sed commodo aliquam dui ac porta. Fusce ipsum felis, imperdiet at posuere ac, viverra at mauris. Maecenas
               tincidunt ligula a sem vestibulum pharetra. Maecenas auctor tortor lacus, nec laoreet nisi porttitor vel.
@@ -35,8 +35,9 @@
           </ul>
           <p>Cras et diam maximus, accumsan sapien et, sollicitudin velit. Nulla blandit eros non turpis lobortis
             iaculis at ut massa.</p>
-        </section>
-        <section class="hydra">
+          </В>
+        </div>
+        <div class="hydra">
           <div class="information">
             <div class="information-item item-1">
               <img src="img/location-icon.png" alt="location icon">
@@ -68,8 +69,9 @@
                 alt="A man wearing a virtual reality headset, fully immersed in a digital experience, with a focused expression on his face.">
             </div>
             <div class="about-content">
-              <h1>ABOUT</h1>
-              <h2>HYDRA VR</h2>
+              <h1>ABOUT<br>
+                <strong>HYDRA VR</strong>
+              </h1>
               <p>Eget mi proin sed libero enim sed faucibus turpis. Nisl rhoncus mattis rhoncus
                 urna neque viverra justo. Vivamus at augue eget arcu dictum. Ultrices gravida
                 dictum fusce ut placerat orci. Aenean et tortor at risus viverra adipiscing at in.
@@ -79,12 +81,10 @@
                 cursus sit amet. Vel eros donec ac odio tempor orci dapibus. Sem nulla pha
                 retra diam sit amet nisl suscipit adipiscing bibendum. Leo a diam sollicitudi
                 n tempor.</p>
-              <div class="button">
-                <a href="#">LET’S GET IN TOUCH</a>
-              </div>
+              <a class="button" href="#">LET’S GET IN TOUCH</a>
             </div>
           </div>
-        </section>
+        </div>
       </div>
     </main>
     <footer class="footer"></footer>
