--- a/lesson_07/index.html
+++ b/lesson_07/index.html
@@ -47,6 +47,8 @@
               <p>Our Faculty is common in all the branches which helps us to maintain the quality education across
                 India. Now there is no need to go anywhere!</p>
               <ul>
+                <!-- <li>Meetings are essential for communication and team building, but they’re often unproductive.
+                  Asynchronous video to the rescue.</li> -->
                 <li>Learn from Top Educators in your city</li>
                 <li>Regular Classes & Doubt Solving</li>
                 <li>300+ Selections in 2022-2023 Batch</li>
@@ -56,17 +58,17 @@
         </section>
         <section class="game">
           <h2>Гра "Win this game"</h2>
-          <div class="start">Start</div>
-          <div class="block-10"></div>
-          <div class="block-20"></div>
-          <div class="block-30"></div>
-          <div class="block-40"></div>
-          <div class="block-50"></div>
-          <div class="block-60"></div>
-          <div class="block-70"></div>
-          <div class="block-80"></div>
-          <div class="block-90"></div>
-          <div class="finish">Finish</div>
+          <div class="block_0">Start</div>
+          <div class="block-1"></div>
+          <div class="block-2"></div>
+          <div class="block-3"></div>
+          <div class="block-4"></div>
+          <div class="block-5"></div>
+          <div class="block-6"></div>
+          <div class="block-7"></div>
+          <div class="block-8"></div>
+          <div class="block-9"></div>
+          <div class="block_10">Finish</div>
         </section>
       </div>
     </main>
