--- a/lesson_08/index.html
+++ b/lesson_08/index.html
@@ -1,23 +1,149 @@
 <!DOCTYPE html>
 <html lang="uk">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="css/style.css" />
-    <title>HomeWork_06</title>
-  </head>
 
-  <body>
-    <div class="wrapper">
-      <header class="header">
-        <div><a href="/index.html" class="back-link">На головну</a></div>
-      </header>
-      <main class="page">
-        <div class="container">
-          
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="css/style.css" />
+  <title>HomeWork_06</title>
+</head>
+
+<body>
+  <div class="wrapper">
+    <header class="header">
+      <div><a href="/index.html" class="back-link">На головну</a></div>
+    </header>
+    <main class="page">
+      <div class="container">
+        <div class="logo">
+          <div>
+            <a href="#">
+              <!-- png у логотипів важив менше ніж avif & webp, взяв стиснені png -->
+              <img src="img/logo_white.png" alt="logo">
+            </a>
+            <p class="logo-01-text"> — Контентне зображення, растрове, png</p>
+          </div>
+          <div>
+            <a href="#">
+              <img src="img/logo_blue.png" alt="logo">
+            </a>
+            <p class="logo-02-text"> — Контентне зображення, растрове, png</p>
+          </div>
         </div>
-      </main>
-      <footer class="footer"></footer>
-    </div>
-  </body>
+        <div class="bg">
+          <div class="bg-01">
+            <div class="bg-bg-01"></div>
+            <p class="bg-text-01"> — Контентне зображення, растрове, avif</p>
+          </div>
+          <div class="bg-02">
+            <div class="bg-bg-02"></div>
+            <p class="bg-text-02"> — Контентне зображення, растрове, avif</p>
+          </div>
+          <div class="bg-03">
+            <div class="bg-bg-03"></div>
+            <p class="bg-text-03"> — Контентне зображення, растрове, avif</p>
+          </div>
+        </div>
+        <div class="icons">
+          <!-- cвідомо немає тих іконок які можна зробити за допомогою css -->
+          <div>
+            <img src="img/icon_black_people.svg" alt="icon people">
+            <p class="icons_text"> — Іконка, векторне, svg</p>
+          </div>
+          <div>
+            <img src="img/icon_rocket.svg" alt="icon rocket">
+            <p class="icons_text"> — Іконка, векторне, svg</p>
+          </div>
+          <div>
+            <img src="img/icon_graph.svg" alt="icon graph">
+            <p class="icons_text"> — Іконка, векторне, svg</p>
+          </div>
+          <div>
+            <img src="img/icon_quotes.svg" alt="icon quotes">
+            <p class="icons_text"> — Іконка, векторне, svg</p>
+          </div>
+          <div>
+            <img src="img/icon_people.svg" alt="icon people">
+            <p class="icons_text"> — Іконка, векторне, svg</p>
+          </div>
+          <div>
+            <img src="img/icon_person.svg" alt="icon person">
+            <p class="icons_text"> — Іконка, векторне, svg</p>
+          </div>
+          <div>
+            <img src="img/icon_mountain.svg" alt="icon mountain">
+            <p class="icons_text"> — Іконка, векторне, svg</p>
+          </div>
+          <div>
+            <img src="img/icon_award.svg" alt="icon award">
+            <p class="icons_text"> — Іконка, векторне, svg</p>
+          </div>
+          <div>
+            <img src="img/icon_facebook.svg" alt="icon facebook">
+            <p class="icons_text"> — Іконка, векторне, svg</p>
+          </div>
+          <div>
+            <img src="img/icon_twiter.svg" alt="icon twiter">
+            <p class="icons_text"> — Іконка, векторне, svg</p>
+          </div>
+          <div>
+            <img src="img/icon_youtube.svg" alt="icon youtube">
+            <p class="icons_text"> — Іконка, векторне, svg</p>
+          </div>
+          <div>
+            <img src="img/icon_instagram.svg" alt="icon instagram">
+            <p class="icons_text"> — Іконка, векторне, svg</p>
+          </div>
+          <div class="icon_location"> — Іконка, векторне, svg</div>
+          <div class="icon_mail"> — Іконка, векторне, svg</div>
+          <div class="icon_phone"> — Іконка, векторне, svg</div>
+        </div>
+        <div class="content_images">
+          <div>
+            <picture>
+              <source srcset="img/content_01-x2.avif 2x, img/content_01-x3.avif 3x" type="image/avif">
+              <img src="img/content_01.avif"
+                alt="A man with a backpack looking at a globe, representing his excitement for traveling around the world.">
+            </picture>
+            <p class="content-images-text"> — Контентне зображення, растрове, avif</p>
+          </div>
+          <div>
+            <picture>
+              <source srcset="img/content_02-x2.avif 2x, img/content_02-x3.avif 3x" type="image/avif">
+              <img src="img/content_02.avif"
+                alt="Woman in a red dress walking towards the entrance gate of a temple, surrounded by lush greenery.">
+            </picture>
+            <p class="content-images-text"> — Контентне зображення, растрове, avif</p>
+          </div>
+          <div>
+            <picture>
+              <source srcset="img/content_03-x2.avif 2x, img/content_03-x3.avif 3x" type="image/avif">
+              <img src="img/content_03.avif"
+                alt="A cityscape showcasing a historic castle rising in the background, surrounded by modern buildings and greenery.">
+            </picture>
+            <p class="content-images-text"> — Контентне зображення, растрове, avif</p>
+          </div>
+          <div>
+            <picture>
+              <source srcset="img/content_04-x2.avif 2x, img/content_04-x3.avif 3x" type="image/avif">
+              <img src="img/content_04.avif"
+                alt="The Eiffel Tower rises majestically against a bright sky, highlighting its elegant architecture and Parisian charm.">
+            </picture>
+            <p class="content-images-text"> — Контентне зображення, растрове, avif</p>
+          </div>
+          <div>
+            <picture>
+              <source srcset="img/content_05-x2.avif 2x, img/content_05-x3.avif 3x" type="image/avif">
+              <img src="img/content_05.avif"
+                alt="A stunning sunset view of Dubai's skyline, highlighting its modern architecture against a colorful sky.">
+            </picture>
+            <p> — Контентне зображення, растрове, avif</p>
+          </div>
+        </div>
+      </div>
+    </main>
+    <footer class="footer"></footer>
+  </div>
+</body>
+
 </html>
