--- a/lesson_09/index.html
+++ b/lesson_09/index.html
@@ -1,23 +1,228 @@
 <!DOCTYPE html>
 <html lang="uk">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="css/style.css" />
-    <title>HomeWork_06</title>
-  </head>
 
-  <body>
-    <div class="wrapper">
-      <header class="header">
-        <div><a href="/index.html" class="back-link">На головну</a></div>
-      </header>
-      <main class="page">
-        <div class="container">
-          
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="css/style.css" />
+  <title>HomeWork_09</title>
+</head>
+
+<body>
+  <div class="wrapper">
+    <header class="header">
+      <div><a href="/index.html" class="back-link">На головну</a></div>
+    </header>
+    <main class="page">
+      <div class="page__container">
+        <div class="info">
+          <div class="info__container">
+            <div class="info__item item-info">
+              <img src="#" alt="#" class="item-info__img">
+              <div class="item-info__title">Free Shipping</div>
+              <p class="item-info__text">Free shipping with discount</p>
+            </div>
+            <div class="info__item item-info">
+              <img src="#" alt="#" class="item-info__img">
+              <div class="item-info__title">Great Support 24/7</div>
+              <p class="item-info__text">Instant access to Contact</p>
+            </div>
+            <div class="info__item item-info">
+              <img src="#" alt="#" class="item-info__img">
+              <div class="item-info__title">100% Sucure Payment</div>
+              <p class="item-info__text">We ensure your money is save</p>
+            </div>
+            <div class="info__item item-info">
+              <img src="#" alt="#" class="item-info__img">
+              <div class="item-info__title">Money-Back Guarantee</div>
+              <p class="item-info__text">30 days money-back</p>
+            </div>
+          </div>
         </div>
-      </main>
-      <footer class="footer"></footer>
-    </div>
-  </body>
+        <div class="products">
+          <div class="products__container">
+            <div class="products__header top-header">
+              <div class="top-header__title">Featured Products</div>
+              <a href="#" class="top-header__link">View All</a>
+            </div>
+            <div class="products__items">
+              <div class="products__item item-products item-products--sale">
+                <div class="item-products__sale sale-product">
+                  <div class="sale-product__text">Sale</div>
+                  <div class="sale-product__percentage">50%</div>
+                </div>
+                <div class="item-products__aside aside-products">
+                  <div class="aside-products__like">
+                    <img src="#" alt="#">
+                  </div>
+                  <div class="aside-products__view">
+                    <img src="#" alt="#">
+                  </div>
+                </div>
+                <img src="#" alt="#" class="item-products__img">
+                <div class="item-products__bottom">
+                  <div class="item-products__info">
+                    <div class="item-products__title">Green Apple</div>
+                    <div class="item-products__price">
+                      <div class="item-products__new-price">$14.99</div>
+                      <div class="item-products__old-price">$20.99</div>
+                    </div>
+                    <div class="item-products__stars"></div>
+                  </div>
+                  <div class="item-products__card">
+                    <img src="#" alt="#">
+                  </div>
+                </div>
+              </div>
+              <div class="products__item item-products">
+                <div class="item-products__sale sale-product">
+                  <div class="sale-product__text">Sale</div>
+                  <div class="sale-product__percentage">50%</div>
+                </div>
+                <div class="item-products__aside aside-products">
+                  <div class="aside-products__like">
+                    <img src="#" alt="#">
+                  </div>
+                  <div class="aside-products__view">
+                    <img src="#" alt="#">
+                  </div>
+                </div>
+                <img src="#" alt="#" class="item-products__img">
+                <div class="item-products__bottom">
+                  <div class="item-products__info">
+                    <div class="item-products__title">Chanise Cabbage</div>
+                    <div class="item-products__price">$14.99</div>
+                    <div class="item-products__stars"></div>
+                  </div>
+                  <div class="item-products__card">
+                    <img src="#" alt="#">
+                  </div>
+                </div>
+              </div>
+              <div class="products__item item-products">
+                <div class="item-products__sale sale-product">
+                  <div class="sale-product__text">Sale</div>
+                  <div class="sale-product__percentage">50%</div>
+                </div>
+                <div class="item-products__aside aside-products">
+                  <div class="aside-products__like">
+                    <img src="#" alt="#">
+                  </div>
+                  <div class="aside-products__view">
+                    <img src="#" alt="#">
+                  </div>
+                </div>
+                <img src="#" alt="#" class="item-products__img">
+                <div class="item-products__bottom">
+                  <div class="item-products__info">
+                    <div class="item-products__title">Capsicum</div>
+                    <div class="item-products__price">$14.99</div>
+                    <div class="item-products__stars"></div>
+                  </div>
+                  <div class="item-products__card">
+                    <img src="#" alt="#">
+                  </div>
+                </div>
+              </div>
+              <div class="products__item item-products">
+                <div class="item-products__sale sale-product">
+                  <div class="sale-product__text">Sale</div>
+                  <div class="sale-product__percentage">50%</div>
+                </div>
+                <div class="item-products__aside aside-products">
+                  <div class="aside-products__like">
+                    <img src="#" alt="#">
+                  </div>
+                  <div class="aside-products__view">
+                    <img src="#" alt="#">
+                  </div>
+                </div>
+                <img src="#" alt="#" class="item-products__img">
+                <div class="item-products__bottom">
+                  <div class="item-products__info">
+                    <div class="item-products__title">Ladies Finger</div>
+                    <div class="item-products__price">$14.99</div>
+                    <div class="item-products__stars"></div>
+                  </div>
+                  <div class="item-products__card">
+                    <img src="#" alt="#">
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="categories">
+          <div class="categories__container">
+            <div class="categories__header top-header">
+              <div class="top-header__title">Shop by Top Categories</div>
+              <a href="#" class="top-header__link">View All</a>
+            </div>
+            <div class="categories__slider slider-categories">
+              <div class="slider-categories__arrow slider-categories__arrow--prev"></div>
+              <div class="slider-categories__items">
+                <div class="slider-categories__item item-info">
+                  <img src="#" alt="#" class="item-info__img">
+                  <div class="item-info__title">Vegetables</div>
+                  <p class="item-info__text">165 Products</p>
+                </div>
+                <div class="slider-categories__item item-info">
+                  <img src="#" alt="#" class="item-info__img">
+                  <div class="item-info__title">Fresh Fruit</div>
+                  <p class="item-info__text">137 Products</p>
+                </div>
+                <div class="slider-categories__item item-info">
+                  <img src="#" alt="#" class="item-info__img">
+                  <div class="item-info__title">Fish</div>
+                  <p class="item-info__text">34 Products</p>
+                </div>
+                <div class="slider-categories__item item-info">
+                  <img src="#" alt="#" class="item-info__img">
+                  <div class="item-info__title">Meat</div>
+                  <p class="item-info__text">165 Products</p>
+                </div>
+                <div class="slider-categories__item item-info">
+                  <img src="#" alt="#" class="item-info__img">
+                  <div class="item-info__title">Water and Drinks</div>
+                  <p class="item-info__text">48 Products</p>
+                </div>
+                <div class="slider-categories__item item-info">
+                  <img src="#" alt="#" class="item-info__img">
+                  <div class="item-info__title">Snacks</div>
+                  <p class="item-info__text">165 Products</p>
+                </div>
+              </div>
+              <div class="slider-categories__arrow slider-categories__arrow--next"></div>
+            </div>
+          </div>
+        </div>
+        <div class="advantage">
+          <div class="advantage__container">
+            <div class="advantage__images">
+              <img src="#" alt="#">
+              <img src="#" alt="#">
+            </div>
+            <div class="advantage__content content-advantage">
+              <div class="content-advantage__title">100% Trusted <br>Organic Food Store</div>
+              <div class="content-advantage__item item-advantage">
+                <div class="item-advantage__title">Healthy & natural food for lovers of healthy food.</div>
+                <p class="item-advantage__text">Ut quis tempus erat. Phasellus euismod bibendum magna non tristique.
+                  Pellentesque semper vestibulum elit sed condimentum. Nunc pretium fermentum interdum. </p>
+              </div>
+              <div class="content-advantage__item item-advantage">
+                <div class="item-advantage__title">Every day fresh and quality products for you.</div>
+                <p class="item-advantage__text">Maecenas vehicula a justo quis laoreet. Sed in placerat nibh, a posuere
+                  ex. Morbi sem neque, aliquam sed orci et, rhoncus lobortis felis. Sed vestibulum nisl sit amet sapien.
+                </p>
+              </div>
+              <a href="#" class="content-advantage__button">Shop Now</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </main>
+    <footer class="footer"></footer>
+  </div>
+</body>
+
 </html>
