--- a/lesson_10/index.html
+++ b/lesson_10/index.html
@@ -1,23 +1,95 @@
 <!DOCTYPE html>
 <html lang="uk">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="css/style.css" />
-    <title>HomeWork_06</title>
-  </head>
 
-  <body>
-    <div class="wrapper">
-      <header class="header">
-        <div><a href="/index.html" class="back-link">На головну</a></div>
-      </header>
-      <main class="page">
-        <div class="container">
-          
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="css/style.css" />
+  <title>HomeWork_06</title>
+</head>
+
+<body>
+  <div class="wrapper">
+    <header class="header">
+      <div><a href="/index.html" class="back-link">На головну</a></div>
+    </header>
+    <main class="page">
+      <div class="container">
+        <div class="products">
+          <div class="products__container">
+            <div class="products__items">
+              <div class="products__item item-products">
+                <div class="item-products__aside aside-products">
+                  <div class="aside-products__like">
+                    <img src="img/heart_icon.svg" alt="heart icon">
+                  </div>
+                  <div class="aside-products__view">
+                    <img src="img/eye_icon.svg" alt="eye icon">
+                  </div>
+                </div>
+                <img src="img/cabbage_img.avif" alt="cabbage image" class="item-products__img">
+                <div class="item-products__bottom">
+                  <div class="item-products__info">
+                    <div class="item-products__title">Chinese cabbage</div>
+                    <div class="item-products__price">$14.99</div>
+                  </div>
+                  <div class="item-products__card">
+                    <img src="img/bag_icon.svg" alt="bag icon">
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
-      </main>
-      <footer class="footer"></footer>
-    </div>
-  </body>
+        <div class="business">
+          <div class="business__container">
+            <div class="business__items">
+              <div class="business__item item-business item-business--left">
+                <div class="item-business__decor">
+                  <img src="img/bg_dots.svg" alt="Decorative grid">
+                </div>
+                <div class="item-business__image">
+                  <img src="img/content_01.avif" alt="People with laptop">
+                </div>
+                <div class="item-business__content">
+                  <h2 class="item-business__title">
+                    The Industry's Top-Rated GRC and <br>Audit Management Technology
+                  </h2>
+                  <p class="item-business__text">
+                    Built to provide the efficiency, connectedness, and visibility you need to stay ahead of today’s
+                    dynamic risk environment. Built to provide the efficiency, connectedness, and visibility you need to
+                    stay ahead of today’s dynamic risk environment.
+                  </p>
+                  <a href="#" class="item-business__button">Read the Documentation</a>
+                </div>
+              </div>
+              <div class="business__item item-business item-business--right">
+                <div class="item-business__decor">
+                  <img src="img/bg_dots_flat.svg" alt="Decorative grid">
+                </div>
+                <div class="item-business__content">
+                  <h2 class="item-business__title">
+                    Explore the Modern <br>Connected Risk Platform
+                  </h2>
+                  <p class="item-business__text">
+                    Built to provide the efficiency, connectedness, and visibility you need to stay ahead of today’s
+                    dynamic risk environment. Built to provide the efficiency, connectedness, and visibility you need to
+                    stay ahead of today’s dynamic risk environment.
+                  </p>
+                  <a href="#" class="item-business__button">Read the Documentation</a>
+                </div>
+                <div class="item-business__image">
+                  <img src="img/content_02.avif" alt="People discussing">
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="business-next"></div>
+      </div>
+    </main>
+    <footer class="footer"></footer>
+  </div>
+</body>
+
 </html>
